--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "context-api",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/BushraSheeraz01/Pizza-App",
+  "homepage": "https://BushraSheeraz01.github.io/Pizza-App",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
